refactor tests for routing by subdomain

--- a/app/views/layouts/_words.html.erb
+++ b/app/views/layouts/_words.html.erb
@@ -1,4 +1,4 @@
-Dictionary:  <%= @dict_string %> <br/><br/>
+Dictionary:  <%= @dictionary.name %> <br/><br/>
 <table>
 <%- @page.each_with_index do |word,i| %>
 
