--- a/app/views/anagrams/show.html.erb
+++ b/app/views/anagrams/show.html.erb
@@ -2,7 +2,7 @@
 <h2> Anagrams:  Crossword services</h2>
 
 Anagrams for: <%= @word %>: <br/><br/>
-Dictionary: <%=@dict_string%><br/><br/>
+Dictionary: <%= @dictionary.name %><br/><br/>
 
 <%- @js.each do |word| %>
 
