set up autocomplete view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
+ <%= stylesheet_link_tag    "application", :media => "all" %>
+<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css">
+<script src="http://code.jquery.com/jquery-1.8.2.js" type="text/javascript"></script>
+
+<script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
 <html>
 <head>
   <title>Crossword Services</title>
+<%= javascript_include_tag "autocomplete" %>
 </head>
-<body>
-<div>
+<body
+
+
 <%= yield %>
 </div>
 </body>
+<div id="PLATFORM_HOST" style="display:none">
+  <%= HOST %>
+</div>
 </html>
