--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -1,6 +1,33 @@
 
-<%- @lines.each do |line| %>
 
-   <%= line %>    <br/>
- <%- end  %>
+<div style="width: 600px, height: 200px">
+<h3> Enter a word </h3>
+<div style='float:left; position: relative; top: 5px;'>
+<select id='word_service'>
+	<option value='anagrams'  selected='selected'> Anagrams </option>
+	<option value='startswith'> Starts with</option>
+	<option value='contains'> Contains </option>
+	<option value='suggestions'> Scrabble Suggestions</option>
+	<option value='autocomplete'> Autocomplete </option>
+	<option value='autospell'> Autocompelete with spell check</option>
+	<option value='levenhood'> Levenshtein words </options>
+</select>
+</div>
+  
+<div class="ui-widget" style='float:left'>
+    <input id="word" />
+</div>
+</div>
 
+<script>
+
+</script>
+</div></div><br/> <br/>
+
+ <div class="ui-widget" style="margin-top: 2em; font-family: Arial;">
+ 
+    
+    <div id="results" style="height: 200px; width: 900px; overflow: auto;" class="ui-widget-content"></div>
+</div>
+
+<br/> <br/>  <a href='/words/api_docs'> Crossword Services API Documentation </a>
