--- a/app/views/anagrams/_suggestions_table.html.erb
+++ b/app/views/anagrams/_suggestions_table.html.erb
@@ -7,6 +7,12 @@
   </tr>
   <tr>
    <td> Shortened words </td>
+  <%- if @word.length > MAX_WORD_FOR_SHORTEN %>
+  <tr> <td colspan='4'> 
+  	   Word length for shortening limited to <%= MAX_WORD_FOR_SHORTEN %>
+  	   <%=@word[0,MAX_WORD_FOR_SHORTEN]%>
+  	</td></tr>
+  <%-end%>
    <%- @suggestions['shorten'].each_with_index  do |a,i| %>
       <td> <%=a%> </td>
       <%- if i%10 == 9 %>
