make dictionary param work

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,4 +18,5 @@
 <div id="PLATFORM_HOST" style="display:none">
   <%= HOST %>
 </div>
+<div id='DICTIONARY' style="display:none"><%=@dictionary.name%></div>
 </html>
