refactor wildcards and levenhoods

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,10 @@
 <script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
 <html>
 <head>
-  <title>Crossword Services</title>
+  <title>Word Services</title>
 <%= javascript_include_tag "autocomplete" %>
 </head>
-<body
-
+<body>
 
 <%= yield %>
 </div>
