--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 <head>
   <title>Word Services</title>
 <%= javascript_include_tag "autocomplete" %>
+<%= javascript_include_tag "autocompletions" %>
 </head>
 <body>
 
