--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -1,4 +1,4 @@
-<h3> Enter a word </h3>
+<h3> Enter a word on your</sm> <span id='device'>here</span></sm></h3>
 
 <div style="width: 450px, height: 200px">
 !
