use coffee script

--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -1,4 +1,6 @@
-<h3> Enter a word on your</sm> <span id='device'>here</span></sm></h3>
+<h3> Enter a word 
+	<span id='device'></span>
+</h3>
 
 <div style="width: 450px, height: 200px">
 !
@@ -22,5 +24,5 @@
  <div id="results" style=" width: 400px; overflow: auto; margin-top: 2em; font-family: Arial;" class="ui-widget-content"></div> 
 
 <br/> <br/>  <a href='/words/api_docs'> About </a>
-
+<%= javascript_include_tag "autocompletions" %>
 
