--- a/app/views/levenhoods/show.html.erb
+++ b/app/views/levenhoods/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <b>Prefix:</b>
-  <%= @levenhood.prefix %>
+  <b>Neighbor:</b>
+  <%= @levenhood.neighbor %>
 </p>
 
 <p>
