--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -3,8 +3,8 @@
 </h3>
 
 <div style="width: 450px, height: 200px">
-!
-<div style='float:left; position: relative; top: 5px;'>
+
+<div >
 <select id='word_service', style='font-size: 140%'>
   <option value='anagrams'  selected='selected'> Anagrams ( use ? for wildcard) </option>
   <option value='startswith'> Starts with</option>
@@ -16,8 +16,8 @@
 </select>
 </div>
   
- <div class="ui-widget" style='float:left;'>
-    <input style='width: 200px;' id="word" />
+ <div class="ui-widget" >
+    <input style='width: 220px;' id="word" />
 </div> <br/>
 
 
