--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -17,7 +17,7 @@
 </div>
   
  <div class="ui-widget" >
-    <input style='width: 220px;' id="word" />
+    <input style='width: 230px; border: 2px black solid;' id="word" />
 </div> <br/>
 
 
