--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=420" />
  <%= stylesheet_link_tag    "application", :media => "all" %>
 <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css">
 <script src="http://code.jquery.com/jquery-1.8.2.js" type="text/javascript"></script>
