--- a/app/views/words/api_docs.html.erb
+++ b/app/views/words/api_docs.html.erb
@@ -34,9 +34,8 @@
         <li> Why should your friends <br/>
              always win at Scrabble? </li>
         <li> <a href='http://norvig.com/spell-correct.html'>
-        Where to start on spelling? </a> 
+        Best reference paper? </a> 
         </li>
-        <li> Lucene/Solr autocomplete? </li> 
     </ul>
 </li>
  </ul>
