font size and center

--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -22,3 +22,4 @@
   <br/> <br/>  <a href='/words/api_docs'> About </a>
 <%= javascript_include_tag "autocompletions" %>
 
+<div class='ui-menu_item'> <a id='ui-id-999'> nonsense <a></div> 
