suggestions displays seamlessly

--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -13,13 +13,17 @@
   </select>
 	  
   <div class="ui-widget" >
-    <input style='width: 250px; border: 2px black solid; font-size: 20px' id="word" />
-  </div> <br/>
+    <input style='width: 250px; border: 2px black solid; font-size: 20px; z-index=2; ' id="word" />
+  </div>
+    
+     <div id="results" style="  width: 400px; overflow: auto; margin-top: 2em; font-size: 18px; z-index: 2; border: 1px black solid; margin: 0px; padding: 0px" 
+
+     class="ui-corner-all"></div> 
+  
 
 
-  <div id="results" style=" width: 400px; overflow: auto; margin-top: 2em; font-family: Arial;" class="ui-widget-content"></div> 
+ 
 
   <br/> <br/>  <a href='/words/api_docs'> About </a>
 <%= javascript_include_tag "autocompletions" %>
 
-<div class='ui-menu_item'> <a id='ui-id-999'> nonsense <a></div> 
