--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -16,9 +16,9 @@
     <input style='width: 250px; border: 2px black solid; font-size: 20px; z-index=2; ' id="word" />
   </div>
     
-     <div id="results" style="  width: 400px; overflow: auto; margin-top: 2em; font-size: 18px; z-index: 2; border: 1px black solid; margin: 0px; padding: 0px" 
-
-     class="ui-corner-all"></div> 
+  <div 
+     class="ui-corner-all" id="results" style="width: 400px; overflow: auto; margin-top: 2em; font-size: 18px; z-index: 2; border: 1px black solid; margin: 0px; padding: 0px">
+</div> 
   
 
 
