--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -3,21 +3,21 @@
   
   <select id='word_service', style='font-size: 20px; border-color:#999'>
     <option value='anagrams'  selected='selected'>
-                                  Anagrams(wildcard is ?) </option>
+                                  Anagrams (use ? for wildcard) </option>
     <option value='startswith'>   Starts with</option>
     <option value='contains'>     Contains </option>
     <option value='suggestions'>  Scrabble Suggestions</option>
     <option value='autocomplete'> Autocomplete </option>
     <option value='autospell'>    Autocomplete spell help</option>
-    <option value='levenhood'>    Levenshtein words </options>
+    <option value='levenhood'>    One letter difference </options>
   </select>
 	  
   <div class="ui-widget" >
-    <input style='width: 250px; border: 2px black solid; font-size: 20px; z-index=2; ' id="word" />
+    <input style='width: 350px; border: 2px black solid; font-size: 20px; z-index=2; ' id="word" />
   </div>
     
   <div 
-     class="ui-corner-all" id="results" style="width: 400px; overflow: auto; margin-top: 2em; font-size: 18px; z-index: 2; border: 1px black solid; margin: 0px; padding: 0px">
+     class="ui-corner-all" id="results" style="width: 350px; overflow: auto; margin-top: 2em; font-size: 18px; z-index: 2; border: 1px black solid; margin: 0px; padding: 0px">
 </div> 
   
 
