--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,10 @@
   <title>Word Services</title>
 </head>
 <body>
-
-<%= yield %>
+<div class='center'>
+  <%= yield %>
+  <%= render :partial=>'layouts/footer' %>
+</div>  
 </div>
 </body>
 <div id="PLATFORM_HOST" style="display:none">
