--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -17,7 +17,7 @@
   </div>
     
   <div 
-     class="ui-corner-all" id="results" style="width: 350px; overflow: auto; margin-top: 2em; font-size: 18px; z-index: 2; border: 1px black solid; margin: 0px; padding: 0px">
+     class="ui-corner-all hide" id="results" style="width: 350px; overflow: auto; margin-top: 2em; font-size: 18px; z-index: 2; border: 1px black solid; margin: 0px; padding: 0px">
 </div> 
 <br/><br/> 
 <%= javascript_include_tag "autocompletions" %>
