--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,8 @@
 </div>  
 </div>
 </body>
-<div id="PLATFORM_HOST" style="display:none">
+<div id="PLATFORM_HOST" class='hidden'>
   <%= HOST %>
 </div>
-<div id='DICTIONARY' style="display:none"><%=@dictionary.name%></div>
+<div id='DICTIONARY' class='hidden'><%=@dictionary.name%></div>
 </html>
