--- a/app/views/words/api.html.erb
+++ b/app/views/words/api.html.erb
@@ -13,12 +13,11 @@
   </select>
 	  
   <div class="ui-widget" >
-    <input style='width: 300px; border: 2px black solid; font-size: 20px; z-index=2; ' id="word" />
+    <input id="word" />
   </div>
     
-  <div 
-     class="ui-corner-all hide" id="results" style="width: 350px; overflow: auto; margin-top: 2em; font-size: 18px; z-index: 2; border: 1px black solid; margin: 0px; padding: 0px">
-</div> 
+  <div  class="ui-corner-all hide" id="results" >
+  </div> 
 <br/><br/> 
 <%= javascript_include_tag "autocompletions" %>
 
